<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_team"
            android:title="@string/team" />
        <item
            android:id="@+id/nav_rencontre"
            android:icon="@drawable/ic_rencontre"
            android:title="@string/list_meeting" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_events"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_stades"
            android:icon="@drawable/ic_stade"
            android:title="@string/stade" />
        <item
            android:id="@+id/nav_resultats"
            android:icon="@drawable/ic_resultat"
            android:title="@string/resultats" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_aide"
            android:title="@string/help" />

    </group>
</menu>